[package]
name = "mch2022-badge-modplayer"
version = "0.1.0"
authors = ["p2"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.31.6", features = ["binstart"] }
anyhow = {version = "1", features = ["backtrace"]}
esp-idf-hal = "0.38"
embedded-hal = "0.2"
embedded-graphics = "0.7"
display-interface = "0.4"
display-interface-spi = "0.4"
ili9341 = { version = "0.5", git = "https://github.com/yuri91/ili9341-rs" }
log = "0.4"
tinytga = "0.4.1"

[build-dependencies]
embuild = "0.29"
anyhow = "1"
